# Stream_Reasoning

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml  codeql.yml
benchmark/: CMakeLists.txt  Query1.cpp  Query2.cpp  Query7.cpp  QueryBenchmarks.cpp  README.md  default_checks.hpp  translator.py
benchmark/data/: parking_data.hpp  parking_translator.py  traffic_data.hpp  traffic_translator.py  weather_data.hpp  weather_translator.py
benchmark/results/: heatmap.py  normalised.py
include/: buffer.h  data.h  defs.h  file_source.h  generator.h  hash_table.h  memory.h  mutli_source.h  operator.h  query.h  queue.h  source.h  utils.h
src/: data.c  file_source.c  generator.c  hash_table.c  memory.c  multi_source.c  query.c  queue.c
tests/: CMakeLists.txt  HashTests.cpp  QueueTests.cpp  benchTests.cpp  data.ttl  dataTests.cpp  queryTests.cpp  test_utils.hpp  utils.hpp
